k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: payment-api
  template:
    metadata:
      labels:
        app: payment-api
    spec:
      containers:
      - name: payment-service
        image: soat4/payment-service:latest
        command: ["bundle", "exec", "rails", "s", "-p", "3001", "-b", "0.0.0.0"] #
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /up
            port: 3001
          initialDelaySeconds: 10
