k8s/ngrok-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngrok-dx
spec:
  selector:
    matchLabels:
      app: ngrok
  template:
    metadata:
      labels:
        app: ngrok
    spec:
      containers:
      - name: ngrok
        image: ngrok/ngrok:latest
        command: ["ngrok", "http", "payment-api-service:3001"]
